# hum

./: .gitignore  AUTHORS  CONTRIBUTING  DESIGN  GOALS  MAINTAINERS  Makefile.am  README  README.markdown  TODO  autogen.sh  configure.ac  hum.desktop  index.html  index.md  org.washedup.Hum.service.in
_layouts/: default.html
data/: Makefile.am  about.ui  hum.glade  hum_ui.xml  main.ui  properties.ui
po/: POTFILES.in
src/: Makefile.am  hum.vala  hum_collection.vala  hum_gui.vala  hum_multi_selection_tree_view.vala  hum_play_list_view.vala  hum_player.vala  hum_query_engine.vala  hum_search_view.vala  hum_store.vala  hum_track.vala  hum_utils.vala
vapi/: Makefile.am  config.vapi  hum.vapi  string-fix.vapi
